--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -218,7 +218,7 @@
                     <input type="text" id="fullName" name="fullName" placeholder="Full Name" required />
                 </div>
                 <div class="form-group">
-                    <label for="email">Eamil</label>
+                    <label for="email">Email</label>
                     <input type="email" id="email" name="email" placeholder="Email" required />
                 </div>
                 <div class="form-group">
