Refactor code: Separate and restructure independent routes for EJS views

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -117,7 +117,7 @@
                         localStorage.setItem('token', data.token);
 
                         setTimeout(() => {
-                            window.location.href = "/api/v1/user/home";
+                            window.location.href = "/view/home";
                         }, 1000);
                     } else {
                         messageElement.textContent = data.message || "Login Failed";
