--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -248,7 +248,7 @@
                     <button type="button" class="social-btn facebook-btn">f</button>
                 </div>
                 <div class="text-container">
-                    <div class="text">I'm already a member!<a href="">Sign In</a></div>
+                    <div class="text">I'm already a member!<a href="/view/login">Sign In</a></div>
                 </div>
             </form>
             <!-- <div class="image">
