--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -10,7 +10,10 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #404040;
+            background-image: url("/images/Login_wallpaper.jpg");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
 
         .login-form {
@@ -47,10 +50,17 @@
             border-radius: 5px;
             cursor: pointer;
             font-weight: bold;
+            margin-bottom: 15px;
         }
 
         .login-button:hover {
             background-color: #2a2c39;
+        }
+
+        .text{
+            padding: 0 15px;
+            color: #909090;
+            font-size: 14px;
         }
 
         .message {
@@ -108,6 +118,9 @@
                 <span id="buttonText">Login</span>
                 <div id="buttonLoader" class="loader"></div>
             </button>
+            <div class="text-container">
+                <div class="text">I'm not a member!<a href="/view/signup">Sign Up</a></div>
+            </div>
             <div id="message" class="message" style="display: none;"></div>
         </form>
     </div>
