login/sign background image

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -10,7 +10,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url("/images/Login_wallpaper.jpg");
+            background-image: url("/images/wallpaper.jpg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
