--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -10,8 +10,11 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            /* background-color: #2a2c36; */
-            background-color: #404040;
+            /* background-color: #404040; */
+            background-image: url("/images/wallpaper.jpg");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
 
         .image {
