--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -37,14 +37,16 @@
         .form-group input {
             width: 100%;
             padding: 0.5rem;
-            border: 1px solid #ccc;
+            border: 1px solid #f2f2f2;
             border-radius: 5px;
+            background-color: #f2f2f2;
+            color: #000000;
         }
 
         .login-button {
             width: 100%;
             padding: 0.6rem;
-            background-color: #2a2c36;
+            background-color: #000000;
             color: white;
             border: none;
             border-radius: 5px;
