admin-users page created, users and home page routing complete

--- a/src/views/admin/admin-users.ejs
+++ b/src/views/admin/admin-users.ejs
@@ -69,10 +69,10 @@
         </div>
 
         <ul class="nav-links">
-            <li><a href="#" class="active">Dashboard</a></li>
+            <li><a href="/view/admin-home">Dashboard</a></li>
             <li><a href="#">Analytics</a></li>
             <li><a href="#">Reports</a></li>
-            <li><a href="/view/admin-users">Users</a></li>
+            <li><a href="#" class="active">Users</a></li>
             <li><a href="#">Settings</a></li>
         </ul>
         <div class="items">
@@ -86,7 +86,7 @@
     </nav>
     <!-- navbar end -->
 
-    <h1>Admin Welcome to Home Page</h1>
+    <h1>Admin Users Page</h1>
    
 </body>
 <script>
