feature: signup redirect to verify email in case of success

--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -326,6 +326,10 @@
                         messageElement.textContent = data.message;
                         messageElement.classList.add('message-success');
                         messageElement.classList.remove('message-error');
+
+                        setTimeout(() => {
+                            window.location.href = "/view/verify-email";
+                        }, 5000);
                     } else {
                         messageElement.textContent = "Signup Failed: " + data.message;
                         messageElement.classList.add('message-error');
